<resources>
    <string name="app_name">BiliveMedal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bilibili粉丝勋章工具包</string>
    <string name="nav_header_subtitle">Github @SakuraKoi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_medal">粉丝勋章查询</string>
    <string name="menu_rank">排行榜对比</string>
    <string name="menu_follow">关注列表查询</string>
    <string name="menu_about">关于</string>
    <string name="menu_feature">功能</string>
</resources>
