<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/menu_about" />

    <item android:title="@string/menu_feature">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_medal"
                    android:icon="@drawable/ic_menu_medal"
                    android:title="@string/menu_medal" />
                <item
                    android:id="@+id/nav_rank"
                    android:icon="@drawable/ic_menu_rank"
                    android:title="@string/menu_rank" />
                <item
                    android:id="@+id/nav_follow"
                    android:icon="@drawable/ic_menu_follow"
                    android:title="@string/menu_follow" />
            </group>
        </menu>
    </item>
</menu>
