<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_about">

    <fragment
        android:id="@+id/nav_about"
        android:name="sakura.kooi.android.bilivemedal.fragments.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_follow"
        android:name="sakura.kooi.android.bilivemedal.fragments.follow.FollowFragment"
        android:label="@string/menu_follow"
        tools:layout="@layout/fragment_follow" />

    <fragment
        android:id="@+id/nav_rank"
        android:name="sakura.kooi.android.bilivemedal.fragments.rank.RankFragment"
        android:label="@string/menu_rank"
        tools:layout="@layout/fragment_rank" />

    <fragment
        android:id="@+id/nav_medal"
        android:name="sakura.kooi.android.bilivemedal.fragments.medal.MedalFragment"
        android:label="@string/menu_medal"
        tools:layout="@layout/fragment_medal" />
</navigation>